Exportação para PDF e Excel em Lançamentos e Totais por forma de pagamento